--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Agrola</h1>
     Ideias:
-    Desenvolver uma solução que beneficie uma comunidade carente na questão alimentar de forma sustentável e orgânica.
+    <div>Desenvolver uma solução que beneficie uma comunidade carente na questão alimentar de forma sustentável e orgânica.</div>
 </body>
 </html>
