--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <h1>Agrola</h1>
-    Ideias:
+    <h2>Ideias:</h2>
     <div>Desenvolver uma solução que beneficie uma comunidade carente na questão alimentar de forma sustentável e orgânica.</div>
+
+    <h2>Como fazer isso?</h2>
+    Criar uma estufa para civilizações precárias, para melhoras as condições alimentícias, utilizando uma terra fértil, e diferentes verduras com um rápido crescimento
+
 </body>
 </html>
